bk_ida/gccida/g0/initializer_constant_valid_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4775:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *valid1; // [rsp+18h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4776:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *valid0; // [rsp+20h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4784:10: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
valuea = lang_hooks_0.expand_constant( value); 
         ^~~~~~~~~~~~
         lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4784:38: error: called object type '<dependent type>' is not a function or function pointer
valuea = lang_hooks_0.expand_constant( value); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4904:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[BYTE5( inner_0->common.type->block.abstract_origin) >> 1] != MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4905:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[BYTE5( inner_0->common.type->block.abstract_origin) >> 1] != MODE_PARTIAL_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4906:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[BYTE5( inner_0->common.type->block.abstract_origin) >> 1] != MODE_COMPLEX_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4907:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[BYTE5( inner_0->common.type->block.abstract_origin) >> 1] != MODE_VECTOR_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4921:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[BYTE5( inner_1->common.type->block.abstract_origin) >> 1] != MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4922:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[BYTE5( inner_1->common.type->block.abstract_origin) >> 1] != MODE_PARTIAL_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4923:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[BYTE5( inner_1->common.type->block.abstract_origin) >> 1] != MODE_COMPLEX_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4924:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[BYTE5( inner_1->common.type->block.abstract_origin) >> 1] != MODE_VECTOR_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4954:29: error: expected expression
if ( valid0 == ( tree_node *)*( &global_trees + 14) ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4954:18: error: use of undeclared identifier 'tree_node'
if ( valid0 == ( tree_node *)*( &global_trees + 14) ) 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4956:29: error: expected expression
if ( valid1 == ( tree_node *)*( &global_trees + 14) ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/varasm.c:4956:18: error: use of undeclared identifier 'tree_node'
if ( valid1 == ( tree_node *)*( &global_trees + 14) ) 
                 ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initializer_constant_valid_p/src/obj/varasm.o] Error 1
